[gd_scene load_steps=4 format=3 uid="uid://xrxglpm8ubgh"]

[ext_resource type="Script" path="res://scripts/inventory/inventory_slot.gd" id="1_tqwi1"]
[ext_resource type="Texture2D" uid="uid://dona640k4euc" path="res://assets/sprites/inventory/inventory_slot.png" id="2_v8ono"]
[ext_resource type="PackedScene" uid="uid://bhxplr7s35x1p" path="res://scenes/inventory/inventory_item.tscn" id="3_x05ne"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_tqwi1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v8ono")

[node name="InventoryItem" parent="." instance=ExtResource("3_x05ne")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
